[gd_scene load_steps=4 format=3 uid="uid://p5ncaxiwve7p"]

[ext_resource type="Script" path="res://Scripts/Menus_Scripts/stat_allocation_menu.gd" id="1_3c24f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cu6jl"]
bg_color = Color(0, 0, 0, 0.215686)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ptsnh"]
bg_color = Color(0, 0, 0, 0.560784)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true

[node name="stat_allocation_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3c24f")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
layout_mode = 0
offset_left = -25.0
offset_top = -17.0
offset_right = 1164.0
offset_bottom = 667.0
color = Color(0.492416, 0.658999, 0.893626, 1)

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 15.0
offset_right = 747.0
offset_bottom = 83.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 40
text = "Available points"

[node name="Go_Back_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1067.0
offset_top = 7.0
offset_right = 1139.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 40
text = "X"

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = 100.0
offset_right = 780.0
offset_bottom = 147.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cu6jl")

[node name="TXT_STR" type="RichTextLabel" parent="Panel"]
layout_mode = 2
offset_left = 11.0
offset_top = 3.0
offset_right = 760.0
offset_bottom = 58.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
text = "STR"

[node name="Adder_Button_STR" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 756.0
offset_top = 2.0
offset_right = 793.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ptsnh")
text = "+"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = 150.0
offset_right = 780.0
offset_bottom = 197.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cu6jl")

[node name="TXT_AGI" type="RichTextLabel" parent="Panel2"]
layout_mode = 2
offset_left = 11.0
offset_top = 3.0
offset_right = 760.0
offset_bottom = 58.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
text = "AGI"

[node name="Adder_Button_AGI" type="Button" parent="Panel2"]
layout_mode = 0
offset_left = 756.0
offset_top = 2.0
offset_right = 793.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ptsnh")
text = "+"

[node name="Panel3" type="Panel" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = 200.0
offset_right = 780.0
offset_bottom = 247.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cu6jl")

[node name="TXT_INT" type="RichTextLabel" parent="Panel3"]
layout_mode = 2
offset_left = 11.0
offset_top = 3.0
offset_right = 760.0
offset_bottom = 58.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
text = "INT"

[node name="Adder_Button_INT" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 756.0
offset_top = 2.0
offset_right = 793.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ptsnh")
text = "+"

[node name="Panel4" type="Panel" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = 250.0
offset_right = 780.0
offset_bottom = 297.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cu6jl")

[node name="TXT_VIT" type="RichTextLabel" parent="Panel4"]
layout_mode = 2
offset_left = 11.0
offset_top = 3.0
offset_right = 760.0
offset_bottom = 58.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
text = "VIT"

[node name="Adder_Button_VIT" type="Button" parent="Panel4"]
layout_mode = 0
offset_left = 756.0
offset_top = 2.0
offset_right = 793.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ptsnh")
text = "+"

[node name="Panel5" type="Panel" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = 300.0
offset_right = 780.0
offset_bottom = 347.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cu6jl")

[node name="TXT_DEX" type="RichTextLabel" parent="Panel5"]
layout_mode = 2
offset_left = 11.0
offset_top = 3.0
offset_right = 760.0
offset_bottom = 58.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
text = "DEX"

[node name="Adder_Button_DEX" type="Button" parent="Panel5"]
layout_mode = 0
offset_left = 756.0
offset_top = 2.0
offset_right = 793.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ptsnh")
text = "+"

[node name="Panel6" type="Panel" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = 350.0
offset_right = 780.0
offset_bottom = 397.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cu6jl")

[node name="TXT_END" type="RichTextLabel" parent="Panel6"]
layout_mode = 2
offset_left = 11.0
offset_top = 3.0
offset_right = 760.0
offset_bottom = 58.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
text = "END"

[node name="Adder_Button_END" type="Button" parent="Panel6"]
layout_mode = 0
offset_left = 756.0
offset_top = 2.0
offset_right = 793.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ptsnh")
text = "+"

[node name="Panel7" type="Panel" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = 400.0
offset_right = 780.0
offset_bottom = 447.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cu6jl")

[node name="TXT_CHA" type="RichTextLabel" parent="Panel7"]
layout_mode = 2
offset_left = 11.0
offset_top = 3.0
offset_right = 760.0
offset_bottom = 58.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
text = "CHA"

[node name="Adder_Button_CHA" type="Button" parent="Panel7"]
layout_mode = 0
offset_left = 756.0
offset_top = 2.0
offset_right = 793.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ptsnh")
text = "+"

[node name="Panel8" type="Panel" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = 450.0
offset_right = 780.0
offset_bottom = 497.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cu6jl")

[node name="TXT_WIS" type="RichTextLabel" parent="Panel8"]
layout_mode = 2
offset_left = 11.0
offset_top = 3.0
offset_right = 760.0
offset_bottom = 58.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
text = "WIS"

[node name="Adder_Button_WIS" type="Button" parent="Panel8"]
layout_mode = 0
offset_left = 756.0
offset_top = 2.0
offset_right = 793.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ptsnh")
text = "+"

[node name="Panel9" type="Panel" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = 500.0
offset_right = 780.0
offset_bottom = 547.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cu6jl")

[node name="TXT_LUK" type="RichTextLabel" parent="Panel9"]
layout_mode = 2
offset_left = 11.0
offset_top = 3.0
offset_right = 760.0
offset_bottom = 58.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
text = "LUK"

[node name="Adder_Button_LUK" type="Button" parent="Panel9"]
layout_mode = 0
offset_left = 756.0
offset_top = 2.0
offset_right = 793.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ptsnh")
text = "+"

[node name="Panel10" type="Panel" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = 550.0
offset_right = 780.0
offset_bottom = 597.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cu6jl")

[node name="TXT_CTRL" type="RichTextLabel" parent="Panel10"]
layout_mode = 2
offset_left = 11.0
offset_top = 3.0
offset_right = 760.0
offset_bottom = 58.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
text = "CTRL"

[node name="Adder_Button_CTRL" type="Button" parent="Panel10"]
layout_mode = 0
offset_left = 756.0
offset_top = 2.0
offset_right = 793.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ptsnh")
text = "+"

[connection signal="button_up" from="Go_Back_Button" to="." method="_on_go_back_button_button_up"]
[connection signal="button_up" from="Panel/Adder_Button_STR" to="." method="_on_adder_button_str_button_up"]
[connection signal="button_up" from="Panel2/Adder_Button_AGI" to="." method="_on_adder_button_agi_button_up"]
[connection signal="button_up" from="Panel3/Adder_Button_INT" to="." method="_on_adder_button_int_button_up"]
[connection signal="button_up" from="Panel4/Adder_Button_VIT" to="." method="_on_adder_button_vit_button_up"]
[connection signal="button_up" from="Panel5/Adder_Button_DEX" to="." method="_on_adder_button_dex_button_up"]
[connection signal="button_up" from="Panel6/Adder_Button_END" to="." method="_on_adder_button_end_button_up"]
[connection signal="button_up" from="Panel7/Adder_Button_CHA" to="." method="_on_adder_button_cha_button_up"]
[connection signal="button_up" from="Panel8/Adder_Button_WIS" to="." method="_on_adder_button_wis_button_up"]
[connection signal="button_up" from="Panel9/Adder_Button_LUK" to="." method="_on_adder_button_luk_button_up"]
[connection signal="button_up" from="Panel10/Adder_Button_CTRL" to="." method="_on_adder_button_ctrl_button_up"]
